--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.questionsandanswers</groupId>
 	<artifactId>questionsandanswers</artifactId>
@@ -17,8 +17,6 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -46,8 +44,6 @@
 			<version>5.3.10</version>
 		</dependency>
 
-		<!--		-->
-
 		<!--	para 	Transaction (@Transactional) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -56,16 +52,15 @@
 			<scope>provided</scope>
 		</dependency>
 
-
 		<!--		entityManager  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.19</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -81,86 +76,6 @@
 			<version>0.9.1</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter</artifactId>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-test</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework</groupId>-->
-<!--            <artifactId>spring-web</artifactId>-->
-<!--            <version>5.3.15</version>-->
-<!--        </dependency>-->
-
-<!--&lt;!&ndash;Dependencias agregadas - cargar en servidor&ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-web</artifactId>-->
-<!--		</dependency>-->
-<!--&lt;!&ndash;fin cargar en servidor&ndash;&gt;-->
-
-
-
-<!--		<dependency>-->
-<!--			<groupId>ch.qos.logback</groupId>-->
-<!--			<artifactId>logback-classic</artifactId>-->
-<!--			<version>1.2.10</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.aspectj</groupId>-->
-<!--			<artifactId>aspectjweaver</artifactId>-->
-<!--			<version>1.9.7</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.hibernate</groupId>-->
-<!--			<artifactId>hibernate-core</artifactId>-->
-<!--			<version>5.4.32.Final</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-tx</artifactId>-->
-<!--			<version>5.3.10</version>-->
-<!--		</dependency>-->
-
-<!--&lt;!&ndash;		para el mapeo de entidades  &ndash;&gt;-->
-<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;			<groupId>org.springframework.boot</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<artifactId>spring-boot-starter-data-jpa</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<version>8.0.19</version>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-
-
-<!--		&lt;!&ndash;	para 	Transaction (@Transactional) &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.projectlombok</groupId>-->
-<!--			<artifactId>lombok</artifactId>-->
-<!--			<version>1.18.20</version>-->
-<!--			<scope>provided</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
-<!--&lt;!&ndash;		fin para 	Transaction (@Transactional) &ndash;&gt;-->
-<!--&lt;!&ndash;		Fin mapeo de endidades &ndash;&gt;-->
-
-<!--&lt;!&ndash;		base de datos 	H2&ndash;&gt;-->
-<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;			<groupId>com.h2database</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<artifactId>h2</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<scope>runtime</scope>&ndash;&gt;-->
-<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
-<!--		&lt;!&ndash;	fin	base de datos 	H2&ndash;&gt;-->
 	</dependencies>
 
 	<build>
